2002-02-25  Jochen Hoenicke  <hoenicke@marge.Informatik.Uni-Oldenburg.DE>

	* jode/bytecode/ClassInfo.java.in (read):  Don't check for a
	maximum version anymore.  Sun changes it with every release without
	changing the bytecode format.

2002-02-15  Jochen Hoenicke  <jochen@gnu.org>

	* net/sf/jode/bytecode/BasicBlockReader.java: handle empty loops.
	(IS_NULL): new constant to tag empty blocks.
	(markReachableBlocks): check for empty loops. 
	(convertBlock): Handle empty blocks.
	(convert): Handle IS_NULL.

	* net/sf/jode/decompiler/MethodAnalyzer.java:
	(analyzeCode): handle empty blocks.

2001-08-14  Jochen Hoenicke  <jochen@gnu.org>

	* build.xml: test is default.
	(release-javadoc): New target.
	(release-src): Get from dir test only source files.
	(doc-javadoc): More parameters for nicer docu.

2001-08-12  Jochen Hoenicke  <jochen@gnu.org>

	* net/sf/jode/bytecode/TypeSignature.java: 
	(getArgumentSize): Renamed to ...
	(getParameterSize): ... this.  Changed all callers.
	(skipType): Made private.

	* net/sf/jode/jvm/CodeVerifier.java: 
	(initInfo): Use TypeSignature.getParameterTypes instead of skipType.

	* net/sf/jode/jvm/SyntheticAnalyzer.java:
	(checkGetClass): Be more lenient with the types, they are already
	checked by the CodeVerifier.  This is to support jdk-1.4.

	* net/sf/jode/expr/InvokeOperator.java
	(dumpExpression): Fixed the check for null outerExpr.

	* net/sf/jode/flow/FlowBlock.java: 
	(checkConsistent): Allow lastModified in a finally block.
	* net/sf/jode/flow/TransformExceptionHandlers.java: Reworked exception
	handlers again.  This time checked with javac 1.3, javac 1.1 and
	jikes.
	(checkTryCatchOrder): New method that was previously part of
	analyze.
	(analyze): Use checkTryCatchOrder.  Don't merge try and catch flow
	blocks anymore, leave it to the analyzeXXX methods.
	(mergeTryCatch): New method.
	(analyzeCatchBlock): Get catchFlow as parameter. Call
	mergeTryCatch.
	(transformSubroutine): Handle POP-only subroutines.